# managebac-mcp

./: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml
Server manage/Server manage/: APIClient.swift  ActivityView.swift  AppDelegate.swift  CodesView.swift  Keychain.swift  LoginView.swift  Models.swift  OverviewView.swift  RootView.swift  ServerManageApp.swift  Theme.swift  UsersView.swift  ViewController.swift
Server manage/Server manage.xcodeproj/: project.pbxproj
Server manage/Server manage.xcodeproj/project.xcworkspace/xcuserdata/levanjaparidze.xcuserdatad/: UserInterfaceState.xcuserstate
Server manage/Server manage.xcodeproj/xcuserdata/levanjaparidze.xcuserdatad/xcschemes/: xcschememanagement.plist
Server manage/Server manage/Base.lproj/: Main.storyboard
deploy/: DEPLOY.md  cloudflared-config.yml  install-macos-daemons.sh  managebac-mcp.service  setup-tunnel.sh
managebac_mcp/: admin.py  auth.py  cache.py  cli.py  config.py  context.py  http_server.py  scraper.py  server.py  users.py
tests/: save_fixtures.py  smoke_test.py  test_live.py  test_parsers.py
widget-preview/: class-files.html  grades-card.html  task-card.html  task-list.html  timetable-card.html
widget-preview/managebac-icons/: README.md
