[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "managebac-mcp"
version = "0.1.0"
description = "ManageBac MCP server for AI assistants"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    "typer",
    "rich",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
]

[project.scripts]
managebac-mcp = "managebac_mcp.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (hit live ManageBac)"]

[tool.hatch.build.targets.wheel]
packages = ["managebac_mcp"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
